--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,10 +1,5 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Base.Theme.ReqresApp" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <item name="colorPrimary">@color/royal_blue</item>
-        <item name="android:windowActivityTransitions">true</item>
-    </style>
 
-    <style name="Theme.ReqresApp" parent="Base.Theme.ReqresApp" />
+    <style name="Theme.ReqresApp" parent="android:Theme.Material.Light.NoActionBar" />
 </resources>
